Fixed the day name labels shown on the right, so are now the same height/margin as the days, allowing them to align correctly.

--- a/src/heat.js.scss
+++ b/src/heat.js.scss
@@ -183,8 +183,9 @@ div.heat-js {
         
                 div.day-name {
                     font-weight: 300;
-                    margin-bottom: 4px;
                     text-align: left !important;
+                    height: var(--heat-js-spacing-font-size);
+                    margin-bottom: var(--heat-js-day-spacing);
                 }
             }
         
